--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   },
   "scripts": {
     "start": "webpack serve --config config/webpack.dev.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack --config config/webpack.prod.js",
+    "heroku-postbuild": "yarn build",
+    "run:build": "node server.js"
   },
   "eslintConfig": {
     "extends": [
